Blender Video texture not refreshing #94464

Closed
opened 2021-12-29 15:27:27 +01:00 by Roman · 12 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1650

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2021-12-29 0:29, hash: c34ea3323a
Worked: version: 3.0.0 Release
Caused by 28df0107d4

Short description of error
Image sequence and video textures does not update when playing animation

Exact steps for others to reproduce the error

  1. Open .blend
  2. Press space to play animation
    test1.zip
**System Information** Operating system: Windows 10 Graphics card: GTX 1650 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2021-12-29 0:29, hash: c34ea3323a3a Worked: version: 3.0.0 Release Caused by 28df0107d4 **Short description of error** Image sequence and video textures does not update when playing animation **Exact steps for others to reproduce the error** 1. Open .blend 2. Press space to play animation [test1.zip](https://archive.blender.org/developer/F12780570/test1.zip)
Author

Added subscriber: @RomanKuz-4

Added subscriber: @RomanKuz-4
Roman changed title from Blender Image Sequence Nodes not refreshing to Blender Video texture not refreshing 2021-12-29 15:45:39 +01:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. Seems very recent regression. Broken between 35bd6fe993 - 20b438d523

(Not able to bisect this on lite build. Unsure how exactly I should configure CmakeCache.txt to make this work on lite build)

Hi, thanks for the report. Seems very recent regression. Broken between 35bd6fe993a1 - 20b438d523c9 (Not able to bisect this on lite build. Unsure how exactly I should configure `CmakeCache.txt` to make this work on lite build)

Added subscriber: @michael64

Added subscriber: @michael64

I just bisected this and found that the error was introduced in 28df0107d4.

I just bisected this and found that the error was introduced in 28df0107d4.
Member

Added subscribers: @JacquesLucke, @Alaska

Added subscribers: @JacquesLucke, @Alaska
Member

CC @JacquesLucke based on the bisecting done by @michael64 (which I can confirm on my own system)

CC @JacquesLucke based on the bisecting done by @michael64 (which I can confirm on my own system)

This issue was referenced by d09b1d2759

This issue was referenced by d09b1d2759861aa012ab2e7e4ce2ffa2b56bd9d3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-12-31 14:25:52 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Note that changing Start Frame / Offset is still broken, but there is a separate report for this, see #95624 (Video texture not refreshing when changing ImageUser Start Frame / Offset)

Note that changing `Start Frame` / `Offset` is still broken, but there is a separate report for this, see #95624 (Video texture not refreshing when changing ImageUser `Start Frame` / `Offset`)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94464
No description provided.